# httpshow

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  debloat.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  oidc.py  response.py  session.py  utils.py
app/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  networkpolicy.yaml  secret.yaml
app/static/: style.css
app/templates/: api.html  base.html  home.html  request.html  request.json
build-tools/: get-version.sh
k8s/: README.md  configmap.yaml  deployment.yaml  httproute.yaml  namespace.yaml  pdb.yaml  secret.yaml  service.yaml
k8s/helm/: .helmignore  Chart.yaml  README.md  values.yaml
k8s/helm/templates/: _helpers.tpl  deployment.yaml  httpproxy.yaml  httproute.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
samples/: config.yaml  debloat.env  env.example
