[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HTTPShow"
version = "0.3.0"
description = "OIDC Request Inspector with OIDC Support"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "authlib>=1.2.1",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "itsdangerous>=2.1.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

